--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
       </div>
 
       <div class="subscribe-block">
-        <p class="subscribe-action">Подпишитесь</p>
+        <p class="subscribe-action">Подпишитесь на рассылку</p>
         <form class="form-subscribe">
           <div class="subscribe-field">
             <input type="email" name="mail" id="mail" placeholder="E-mail" />
@@ -367,36 +367,26 @@
             <svg class="form-icons">
               <use href="./images/sprite.svg#icon-person-black"></use>
             </svg>
-
           </div>
-
-
           <label for="tel">Телефон</label>
           <div class="form-field">
             <input type="tel" class="form-input" name="tel" id="tel" class="form-place" />
             <svg class="form-icons">
               <use href="./images/sprite.svg#icon-phone-black"></use>
             </svg>
-
           </div>
-
-
           <label for="mail">Почта</label>
           <div class="form-field">
             <input type="email" class="form-input" name="mail" id="mail" />
             <svg class="form-icons">
               <use href="./images/sprite.svg#icon-Vector"></use>
             </svg>
-
           </div>
           <label for="comment">Комментарий</label>
-          <div class="form-field">
-
+          <div class="form-comment">
             <textarea name="comment" id="comment" cols="" rows="" placeholder="Введите текст"></textarea>
           </div>
         </div>
-
-
         <label class="policy-label">
           <input class="check-box-icon" type="checkbox" name="policy" />
 
